--- a/DevMedia/06-diretivas-estruturais/src/app/component-ng-switch-livro/component-ng-switch-livro.component.html
+++ b/DevMedia/06-diretivas-estruturais/src/app/component-ng-switch-livro/component-ng-switch-livro.component.html
@@ -1,1 +1,10 @@
-<p>component-ng-switch-livro works!</p>
+<h3 style="background-color: #f5c6cb;">Componente Livro (Inicio)</h3>
+<h4>Dados obtidos diretamente via propriedades/variaveis.</h4>
+<p>Titulo do Livro: {{Titulo}}</p>
+<p>Ano do Livro: {{ano}}</p>
+<h4>Dados obtidos diretamente via Objeto.</h4>
+<ul>
+    <li>Ano do Livro: {{Obj_Completo.ano}}</li>
+    <li>Titulo do Livro: {{Obj_Completo.titulo}}</li>
+</ul>
+<h3 style="background-color: #f5c6cb;">Componente Livro (fim)</h3>
