--- a/DevMedia/06-diretivas-estruturais/src/app/component-ng-switch-revista/component-ng-switch-revista.component.html
+++ b/DevMedia/06-diretivas-estruturais/src/app/component-ng-switch-revista/component-ng-switch-revista.component.html
@@ -1,1 +1,10 @@
-<p>component-ng-switch-revista works!</p>
+<h3 style="background-color: #bee5eb;">Componente Revista (inicio)</h3>
+<h4>Dados obtidos diretamente via propriedades/variaveis.</h4>
+<p>Titulo do Revista: {{Titulo}}</p>
+<p>Ano do Revista: {{ano}}</p>
+<h4>Dados obtidos diretamente via Objeto.</h4>
+<ul>
+    <li>Ano do Revista: {{Obj_Completo.ano}}</li>
+    <li>Titulo do Revista: {{Obj_Completo.titulo}}</li>
+</ul>
+<h3 style="background-color: #bee5eb;">Componente Revista (Fim)</h3>
