DevMedia: Diretivas estruturais nGSwitch Finalizado

--- a/DevMedia/06-diretivas-estruturais/src/app/component-ng-switch-filme/component-ng-switch-filme.component.html
+++ b/DevMedia/06-diretivas-estruturais/src/app/component-ng-switch-filme/component-ng-switch-filme.component.html
@@ -1,5 +1,9 @@
-<h3 style="background-color: #c3e6cb;">Componente filme (inicio)</h3>
-<h4>Dados obtidos diretamente via propriedades/variaveis.</h4>
+<h3 style="background-color: #c3e6cb;">
+    Componente filme (inicio)
+</h3>
+<h4>
+    Dados obtidos diretamente via propriedades/variaveis.
+</h4>
 <p>Titulo do Filme: {{Titulo}}</p>
 <p>Ano do Filme: {{ano}}</p>
 <h4>Dados obtidos diretamente via Objeto.</h4>
@@ -7,4 +11,6 @@
     <li>Ano do Filme: {{Obj_Completo.ano}}</li>
     <li>Titulo do Filme: {{Obj_Completo.titulo}}</li>
 </ul>
-<h3 style="background-color: #c3e6cb;">Componente filme (Fim)</h3>
+<h3 style="background-color: #c3e6cb;">
+    Componente filme (Fim)
+</h3>
