DevMedia: Diretivas Estruturais Finalizado

--- a/DevMedia/06-diretivas-estruturais/src/app/app.component.html
+++ b/DevMedia/06-diretivas-estruturais/src/app/app.component.html
@@ -3,3 +3,6 @@
 <app-component-ng-for></app-component-ng-for>
 <br/>
 <app-component-ng-switch></app-component-ng-switch>
+<br/>
+
+<app-component-ngfor-ngif></app-component-ngfor-ngif>
