Ajustes nos cursos já existentes

--- a/DevMedia/04-contador/src/app/cpntador/cpntador.component.html
+++ b/DevMedia/04-contador/src/app/cpntador/cpntador.component.html
@@ -1,2 +1,6 @@
 <h1>{{numero}}</h1>
+
 <button (click)="incrementar()">Icrementar</button>
+<button (click)="decrementar()">Decrementar</button>
+<br/>
+<p>{{mensagem}}</p>
