--- a/DevMedia/06-diretivas-estruturais/src/app/component-ng-if/component-ng-if.component.html
+++ b/DevMedia/06-diretivas-estruturais/src/app/component-ng-if/component-ng-if.component.html
@@ -1,3 +1,3 @@
 <h1>Diretiva ngIf</h1>
 <button (click)="toogleConteudo()">Toggle</button>
-<h1 *ngIf="exibirConteudo">Conteudo oculto!</h1>
+<h1 *ngIf="exibirConteudo">Conteudo oculto! teste</h1>
