--- a/Udemy/Secao02/meu-primeiro-app/src/app/title/title.component.html
+++ b/Udemy/Secao02/meu-primeiro-app/src/app/title/title.component.html
@@ -1,4 +1,3 @@
-<span>Componente title >> valor da variavel: </span>
-<span>{{title}}</span>
+<span>Componente title >> valor da variavel: </span><span>{{title}}</span>
 <br/>
 <span>Testando ngOnChanges:</span> <span>{{ngOnInitTeste}}</span>
