--- a/Udemy/Secao03_Aula12_Componente/projeto/src/app/title/title.component.html
+++ b/Udemy/Secao03_Aula12_Componente/projeto/src/app/title/title.component.html
@@ -1,1 +1,61 @@
-<h1>{{title}}</h1>
+<div class="container mt-4">
+
+    <div div class="row col-sm-5 col-md-12">
+        <div class="card">
+            <div class="card-header text-center">
+                <h3><strong>{{title}}</strong></h3>
+            </div>
+            <div class="card-body">
+                <div class="row">
+                    <div class="col-sm-5 col-md-4">
+                        <div class="card">
+                            <div class="card-header text-center">
+                                <strong> Seção 03 Aula 12. O que é um Component</strong>
+                            </div>
+                            <div class="card-body">
+                                <h5 class="card-title">Inicio do projeto</h5>
+                                <p class="card-text">valor vindo direto do arquivo type script</p>
+                                <p class="card-text"><strong>{{title}}</strong> </p>
+                                <!--<a href="#" class="btn btn-primary">Go somewhere</a>-->
+                            </div>
+                        </div>
+                    </div>
+
+
+                    <div class="col-sm-5 col-md-4">
+                        <div class="card">
+                            <div class="card-header text-center">
+                                Seção 03 Aula 15. ngOnInit
+                            </div>
+                            <div class="card-body">
+                                <h5 class="card-title">Valores exibidos no console para essa aula</h5>
+                                <p class="card-text">Toda a logica está no arquivo <strong>app.component.ts</strong> que é o arquivo que contém a 
+                                                     configuração de entrada do Angular
+
+                                </p>
+                                <!--<a href="#" class="btn btn-primary">Go somewhere</a>-->
+                            </div>
+                        </div>
+                    </div>
+            
+                    <div class="col-sm-5 col-md-4">
+                        <div class="card">
+                            <div class="card-header text-center">
+                                Seção 03 Aula 16. ngOnChanges
+                            </div>
+                            <div class="card-body">
+                                <h5 class="card-title">Valores exibidos no console para essa aula</h5>
+                                <p class="card-text">Toda a logica está no arquivo <strong>tiltle ➜ title.component.ts</strong> que é o arquivo que contém a 
+                                    configuração de entrada do Angular
+
+               </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+  
+</div>
