Secão 03 Aula 17 - Em andamento

--- a/Udemy/Secao03_Aula12_Componente/projeto/src/app/title/title.component.html
+++ b/Udemy/Secao03_Aula12_Componente/projeto/src/app/title/title.component.html
@@ -1,4 +1,4 @@
-<div class="container mt-4">
+<div class="mt-4">
 
     <div div class="row col-sm-5 col-md-12">
         <div class="card">
@@ -25,7 +25,7 @@
                     <div class="col-sm-5 col-md-4">
                         <div class="card">
                             <div class="card-header text-center">
-                                Seção 03 Aula 15. ngOnInit
+                                <strong>Seção 03 Aula 15. ngOnInit</strong>
                             </div>
                             <div class="card-body">
                                 <h5 class="card-title">Valores exibidos no console para essa aula</h5>
