--- a/Udemy/Secao03_Aula12_Componente/projeto/src/app/data-binding/data-binding.component.html
+++ b/Udemy/Secao03_Aula12_Componente/projeto/src/app/data-binding/data-binding.component.html
@@ -26,37 +26,55 @@
                     </div>
 
 
-    <div class="col-sm-5 col-md-4" *ngIf="true">
-        <div class="card">
-            <div class="card-header text-center">
-                <strong>Seção 04 - 22. Property Binding</strong>
-            </div>
-            <div class="card-body">
-                <h5 class="card-title">É a funcionalidade de alimentar a tela com informações/valores vindo do "backend" do Angular o TypeScript</h5>
-                <p class="card-text">Toda a logica está no arquivo <strong>data-binding.component.ts</strong> que é o arquivo que contém toda a logica 
-                    necessária para que a tela funcione
-                </p>
-                <p><strong>Nome vindo do TS: </strong><span [textContent]="nome"></span></p>
-                <button class="btn btn-primary" [disabled]="checkedDisabled">Desabilitar</button>
-                <div class="row">
-                    <p>Caminho da imagem proveniente da propriedade imgSRC do typeScript <img [src]="imgSRC" [title]="imgTitle"></p>
-                </div>
-            </div>
-        </div>
-    </div>
-
-                    <div class="col-sm-5 col-md-4" *ngIf="false">
+                    <div class="col-sm-5 col-md-4" *ngIf="true">
                         <div class="card">
                             <div class="card-header text-center">
-                                Seção 03 Aula 16. ngOnChanges
+                                <strong>Seção 04 - 22. Property Binding</strong>
                             </div>
                             <div class="card-body">
-                                <h5 class="card-title">Valores exibidos no console para essa aula</h5>
-                                <p class="card-text">Toda a logica está no arquivo <strong>tiltle ➜
-                                        title.component.ts</strong> que é o arquivo que contém a
-                                    configuração de entrada do Angular
-
+                                <h5 class="card-title">É a funcionalidade de alimentar a tela com informações/valores
+                                    vindo do "backend" do Angular o TypeScript</h5>
+                                <p class="card-text">Toda a logica está no arquivo
+                                    <strong>data-binding.component.ts</strong> que é o arquivo que contém toda a logica
+                                    necessária para que a tela funcione
                                 </p>
+                                <p><strong>Nome vindo do TS: </strong><span [textContent]="nome"></span></p>
+                                <button class="btn btn-primary" [disabled]="checkedDisabled">Desabilitar</button>
+                                <div class="row">
+                                    <p>Caminho da imagem proveniente da propriedade imgSRC do typeScript <img
+                                            [src]="imgSRC" [title]="imgTitle"></p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-sm-5 col-md-4" *ngIf="true">
+                        <div class="card">
+                            <div class="card-header text-center">
+                                <strong>Seção 04 Aula 23. Event Binding</strong>
+                            </div>
+                            <div class="card-body">
+                                <h5 class="card-title">Passa para o TypeScript todas as infomrações de um elemento HTML </h5>
+                                <button type="button" class="btn btn-primary" (click)="FUN_alertaInfo($event)">Evento</button>
+                                <p></p>
+                                <div class="row" *ngIf="mensagemAlertVisvel">
+                                    <div col-md-12>
+                                        <div class="alert alert-info">{{mensagemAlertTexto}}</div>
+                                    </div>
+                                    
+
+                                </div>
+                                <div style="background-color: #f8d7da; width: 300px; height: 300px;" (mousemove)="FUN_MouseMovePosition($event)">
+                                    <div class="alert alert-dark">
+                                        <p><strong>Mensagem: </strong> <span [textContent]="position.message"></span></p>
+                                        <p><strong>Eixo x: </strong> <span [textContent]="position.x"></span></p>
+                                        <p><strong>Eixo y: </strong> <span [textContent]="position.y"></span></p>
+                                    </div> 
+                                    <div col-md-12>
+                                        <div class="alert alert-dark">Evento mousemove</div>
+                                    </div>
+
+                                </div>
                             </div>
                         </div>
                     </div>
