--- a/Udemy/Secao03_Aula12_Componente/projeto/src/app/diretivasatributos/diretivasatributos.component.html
+++ b/Udemy/Secao03_Aula12_Componente/projeto/src/app/diretivasatributos/diretivasatributos.component.html
@@ -15,7 +15,8 @@
                             </div>
                             <div class="card-body">
                                 <h5 class="card-title">Adiciona/Remove classes css em componentes HTML </h5>
-                                <p class="card-text">Esse atributo permite adicionar ou remover classes HTML utilizando comparações que retornam um valor booleano ou uma propriedade boolena.</p>
+                                <p class="card-text">Esse atributo permite adicionar ou remover classes HTML utilizando
+                                    comparações que retornam um valor booleano ou uma propriedade boolena.</p>
                                 <div [ngClass]="'row'">
                                     <div
                                         [ngClass]="{'alert':true,'alert-success': aula29_ValorNgClass,'alert-danger': !aula29_ValorNgClass  }">
@@ -33,11 +34,14 @@
                             </div>
                             <div class="card-body">
                                 <h5 class="card-title">Adiciona/Remove style css em componentes HTML</h5>
-                                <p class="card-text">Adiciona/Remove style css em componentes HTML com valores vindo ou não do TypeScript</p>
+                                <p class="card-text">Adiciona/Remove style css em componentes HTML com valores vindo ou
+                                    não do TypeScript</p>
 
-                                <button type="button" class="btn btn-primary" (click)="FUN_aula30_AlterarAltura()"> {{aula30_TextoBoao}}</button>
+                                <button type="button" class="btn btn-primary" (click)="FUN_aula30_AlterarAltura()">
+                                    {{aula30_TextoBoao}}</button>
                                 <p></p>
-                                <div [ngStyle]="{'height':aula30_heigth,'background':aula30_backgroudColor,'width': '300px'}">
+                                <div
+                                    [ngStyle]="{'height':aula30_heigth,'background':aula30_backgroudColor,'width': '300px'}">
                                     <span><strong>Tamanho: </strong> {{aula30_heigth}}</span>
                                 </div>
                             </div>
@@ -47,11 +51,53 @@
                     <div class="col-sm-5 col-md-4">
                         <div class="card">
                             <div class="card-header text-center">
-                                <strong> Seção 04 - Aula 30. ngStyle</strong>
+                                <strong> Seção 05 - Aula 31. ngModel</strong>
                             </div>
                             <div class="card-body">
-                                <h5 class="card-title">Exemplo de interpolation </h5>
-                                <h6>valor vindo direto do arquivo type script</h6>
+                                <h5 class="card-title">Permite que a transição dos dados sejam bi direcional</h5>
+                                <p class="card-text">Ou seja, os dados quando alterados tanto no HTML ou no TypeScript são atualizados automaticamente para os dois locais</p>
+                                <div class="input-group input-group-sm mb-3">
+                                    <div class="input-group-prepend">
+                                        <span class="input-group-text" id="inputGroup-sizing-sm"><i class="fa fa-pencil"
+                                                aria-hidden="true"></i></span>
+                                    </div>
+                                    <input type="text" class="form-control" aria-label="Small"
+                                        aria-describedby="inputGroup-sizing-sm" [(ngModel)]="aula31_Nome"
+                                        placeholder="Escreva algo" />
+                                </div>
+                                <div style="text-align: right;">
+                                    <button type="button" class="btn btn-primary" (click)="FUN_aula31_Adicionar()"><i class="fa fa-plus-circle"></i> Adicionar</button>
+                                </div>
+                                <table class="table table-bordered table-responsive m-2" *ngIf="aula31_ListaNomes.length > 0">
+                                    <thead>
+                                        <tr>
+                                            <th>Nome</th>
+                                            <th>Adicionao em</th>
+                                            <th>#</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr *ngFor="let item of aula31_ListaNomes; let i=index;">
+                                            <td>{{item.nome}}</td>
+                                            <td>{{item.AdicionadoEm}}</td>
+                                            <td>
+                                                <button type="button" class="btn btn-danger btn-sm" (click)="FUN_aula31_Excluir(i)"><i class="fa fa-trash-o"></i></button>
+                                            </td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                    </div>
+                    <!---------------------------------------------------------------------------------------------->
+                    <div class="col-sm-5 col-md-4 mt-2">
+                        <div class="card">
+                            <div class="card-header text-center">
+                                <strong> Seção 0X - Aula XX</strong>
+                            </div>
+                            <div class="card-body">
+                                <h5 class="card-title">XXXXXXXXXXXXXXXXXX </h5>
+                                <h6>xxxxxxxxxx </h6>
 
                                 <h6>fazendo comparação booleana</h6>
                                 <h6>fazendo conta</h6>
