Secao 05 Aula 34. Pipes >> Finalizada >> Pesquisar mais depois

--- a/Udemy/Secao03_Aula12_Componente/projeto/src/app/diretivasatributos/diretivasatributos.component.html
+++ b/Udemy/Secao03_Aula12_Componente/projeto/src/app/diretivasatributos/diretivasatributos.component.html
@@ -154,6 +154,21 @@
                         </div>
                     </div>
                     <!---------------------------------------------------------------------------------------------->
+                    <div class="col-sm-5 col-md-4 mt-2">
+                        <div class="card">
+                            <div class="card-header text-center">
+                                <strong> Seção 05 - Aula 34. Pipes</strong>
+                            </div>
+                            <div class="card-body">
+                                <h6 class="card-title">Permite a manipulação dos dados</h6>
+                                <p class="card-text"> Permite chamar funções, aplicar formatações entre outros</p>
+
+                                <p><strong>Sem Pipe:</strong> {{aula34_Data}}</p>
+                                <p><strong>Com Pipe:</strong> {{aula34_Data | date: 'dd/MM/yyyy HH:mm:ss'}}</p>
+                            </div>
+                        </div>
+                    </div>
+                    <!---------------------------------------------------------------------------------------------->
                     <div class="col-sm-5 col-md-4 mt-2" *ngIf="false">
                         <div class="card">
                             <div class="card-header text-center">
@@ -162,10 +177,7 @@
                             <div class="card-body">
                                 <h5 class="card-title">XXXXXXXXXXXXXXXXXX </h5>
                                 <h6>xxxxxxxxxx </h6>
-
-                                <h6>fazendo comparação booleana</h6>
-                                <h6>fazendo conta</h6>
-                                <p class="card-text">Fazendo conta 10 % 2 <strong>{{10 % 2}}</strong> </p>
+                                
                             </div>
                         </div>
                     </div>
